tests/core/error/garbage-1.rq
# Add some unparseable garbage at the end of the query
SELECT ?u { } values ?u { } asdfqwertyuiop
